--- a/index.html
+++ b/index.html
@@ -289,8 +289,9 @@
               <p class="popular-item-subtitle">Сливочное мороженое с малиновым джемом</p>
               <div class="item-wrapper">
                 <span class="item-price">310 ₽/кг</span>
-                <button class="item-button " type="button"><span class="visually-hidden">Добавить в
-                    корзину.</span><svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
+                <button class="item-button " type="button">
+                  <span class="visually-hidden">Добавить в корзину.</span>
+                  <svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M1.16667 0.107941C0.798477 0.107941 0.5 0.406418 0.5 0.774607C0.5 1.1428 0.798477 1.44127 1.16667
                      1.44127H2.93794L3.40537 3.77666C3.40821 3.79461 3.41176 3.81232 3.416 3.82976L4.38338 8.66309L4.3835
                      8.66365C4.46706 9.08366 4.69562 9.46093 5.02921 9.72948C5.36111 9.99666 5.77595 10.1393 6.20183
@@ -316,8 +317,9 @@
               <p class="popular-item-subtitle">Фисташковый пломбир с кусочками шоколада</p>
               <div class="item-wrapper">
                 <span class="item-price">340 ₽/кг</span>
-                <button class="item-button" type="button"><span class="visually-hidden">Добавить в
-                    корзину.</span><svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
+                <button class="item-button" type="button">
+                  <span class="visually-hidden">Добавить в корзину.</span>
+                  <svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M1.16667 0.107941C0.798477 0.107941 0.5 0.406418 0.5 0.774607C0.5 1.1428 0.798477 1.44127 1.16667
                      1.44127H2.93794L3.40537 3.77666C3.40821 3.79461 3.41176 3.81232 3.416 3.82976L4.38338 8.66309L4.3835
                      8.66365C4.46706 9.08366 4.69562 9.46093 5.02921 9.72948C5.36111 9.99666 5.77595 10.1393 6.20183
@@ -343,8 +345,9 @@
               <p class="popular-item-subtitle">Крем-брюле <br> с черничным джемом</p>
               <div class="item-wrapper">
                 <span class="item-price">330 ₽/кг</span>
-                <button class="item-button " type="button"><span class="visually-hidden">Добавить в
-                    корзину.</span><svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
+                <button class="item-button " type="button">
+                  <span class="visually-hidden">Добавить в корзину.</span>
+                  <svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M1.16667 0.107941C0.798477 0.107941 0.5 0.406418 0.5 0.774607C0.5 1.1428 0.798477 1.44127 1.16667
                      1.44127H2.93794L3.40537 3.77666C3.40821 3.79461 3.41176 3.81232 3.416 3.82976L4.38338 8.66309L4.3835
                      8.66365C4.46706 9.08366 4.69562 9.46093 5.02921 9.72948C5.36111 9.99666 5.77595 10.1393 6.20183
@@ -358,7 +361,8 @@
                          12.3634C7.04876 13.0513 6.49105 13.6091 5.80307 13.6091C5.1151 13.6091 4.55739 13.0513 4.55739 12.3634ZM10.9307
                          12.3634C10.9307 11.6754 11.4884 11.1177 12.1764 11.1177C12.8644 11.1177 13.4221 11.6754 13.4221 12.3634C13.4221
                           13.0513 12.8644 13.6091 12.1764 13.6091C11.4884 13.6091 10.9307 13.0513 10.9307 12.3634Z" />
-                  </svg></button>
+                  </svg>
+                </button>
               </div>
             </div>
           </li>
@@ -371,7 +375,8 @@
               <div class="item-wrapper">
                 <span class="item-price">320 ₽/кг</span>
                 <button class="item-button" type="button"><span class="visually-hidden">Добавить в
-                    корзину.</span><svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
+                    корзину.</span>
+                  <svg width="16" height="16" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M1.16667 0.107941C0.798477 0.107941 0.5 0.406418 0.5 0.774607C0.5 1.1428 0.798477 1.44127 1.16667
                      1.44127H2.93794L3.40537 3.77666C3.40821 3.79461 3.41176 3.81232 3.416 3.82976L4.38338 8.66309L4.3835
                      8.66365C4.46706 9.08366 4.69562 9.46093 5.02921 9.72948C5.36111 9.99666 5.77595 10.1393 6.20183
@@ -428,7 +433,8 @@
               в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.
               Честно =)</p>
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="newsletter-input" id="email" type="email" placeholder="email@example.com" name="email"
+              <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
+              <input class="newsletter-input " id="email" type="email" placeholder="email@example.com" name="email"
                 required>
               <button class="newsletter-button button-secondary" type="submit">Отправить</button>
             </form>
@@ -448,13 +454,16 @@
             <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
               <div class="input-wrapper-one">
                 <label class="delivery-label date-label" for="date"> Дата </label>
+                <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
                 <input class="delivery-input date-input" id="date" type="text" placeholder="01.04.2020" name="date">
                 <label class="delivery-label phone-label" for="phone"> Телефон</label>
+                <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
                 <input class="delivery-input phone-input" id="phone" type="text" placeholder="+7 800 999-00-00"
                   name="phone">
               </div>
               <div class="input-wrapper-two">
                 <label class="delivery-label address-label" for="address"> Адрес </label>
+                <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
                 <input class="delivery-input address-input" id="address" type="text"
                   placeholder="ул. Большая Конюшенная, 19/8" name="address">
               </div>
@@ -530,7 +539,7 @@
           <span class="visually-hidden">HTML academy.</span>
           <svg class="htmlacademy-icon" aria-hidden="true" focusable="false" viewBox="0 0 115 33" width="93" height="27"
             fill="none">
-            <g clip-path="url(#a)" fill="#2D3440">
+            <g clip-path="url(#a)">
               <path
                 d="M0 10.42v2.08h1.99v-2.08H0Zm9.42-6.76c-1.26 0-2.28.58-2.92 1.4h-.07V0H4.79v12.5h1.64V8.21c0-1.72 1.07-2.95 2.64-2.95 1.49
                  0 2.35 1.11 2.35 2.6v4.64h1.65V7.57c0-2.38-1.47-3.9-3.65-3.9Zm12.11.24h-3.9V.88H16V3.9h-1.55v1.6H16v4.84c0 1.39.78 2.15 2.18
@@ -576,6 +585,7 @@
         <section class="modal-content">
           <h2 class="modal-title">Мы обязательно ответим вам!</h2>
           <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+            <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
             <input class="modal-input modal-name" type="text" placeholder="Имя и фамилия" name="name">
             <input class="modal-input modal-email" type="email" placeholder="email@example.com" name="email" required>
             <textarea class="modal-input modal-appeal" placeholder="В свободной форме" name="appeal" rows="6"
