--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
       <nav class="header-navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Каталог</a>
+            <button class="navigation-link navigation-button current" type="button">Каталог</button>
             <div class="catalog-popup">
               <ul class="catalog-popup-list">
                 <li class="catalog-popup-item">
@@ -54,25 +54,41 @@
         <a class="header-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         <!-- Поиск по сайту -->
         <div class="search-wrapper">
-          <button class=" header-button search-button" type="button"></button>
+          <button class=" header-button search-button" type="button">
+            <svg width="14" height="14" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M1.66 6.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" />
+            </svg>
+          </button>
           <div class="search-popup">
             <form class="search-popup-form" action="https://echo.htmlacademy.ru/" method="post">
               <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
-              <input class="search-popup-input " type="search" placeholder="Поиск по сайту" name="search-form">
+              <label class="visually-hidden" for="search-form">Поиск по сайту.</label>
+              <input class="search-popup-input " type="search" placeholder="Поиск по сайту" name="search-form"
+                id="search-form">
             </form>
           </div>
         </div>
         <!-- Кнопка войти -->
         <div class="login-wrapper">
-          <button class="header-button login-button" type="button">Вход</button>
+          <button class="header-button login-button" type="button">Вход
+            <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M8 1.52c0-.36.3-.66.67-.66h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H8.67a.67.67 0 0 1 0-1.33h2.66a.67.67 0
+                0 0 .67-.67V2.86a.67.67 0 0 0-.67-.67H8.67A.67.67 0 0 1 8 1.52Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.33a.67.67 0
+                 0 1 .2.48.66.66 0 0 1-.2.47L5.8 11.33a.67.67 0 1 1-.94-.94l2.2-2.2H.66a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" />
+            </svg>
+          </button>
           <div class="login-popup">
             <h2 class="login-popup-title">Личный кабинет</h2>
             <form class="login-popup-form" action="https://echo.htmlacademy.ru/" method="post">
               <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
+              <label class="visually-hidden" for="login-email">Введите ваш email.</label>
               <input class="login-popup-input " type="email" placeholder="email@example.com" name="login-email"
-                required>
+                id="login-email" required>
+              <label class="visually-hidden" for="login-password">Введите ваш пароль.</label>
               <input class="login-popup-input input-password " type="password" value="пароль" placeholder="пароль"
-                name="login-password" required>
+                name="login-password" id="login-password" required>
               <button class="login-popup-button button-secondary" type="submit">Войти</button>
               <ul class="help-list">
                 <li>
@@ -87,9 +103,16 @@
         </div>
         <!-- Корзина -->
         <div class="basket-wrapper">
-          <button class=" header-button basket-button" type="button">2 товара</button>
-          <!-- Чтобы увидеть разные всплывающие окна у корзины перейдите на 664 строку styles.css
-             и измените значения двух свойств на противоположные -->
+          <button class=" header-button basket-button" type="button">2 товара
+            <svg width="15" height="14" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34a.66.66 0 0 0 0 .05l.97 4.83a1.83 1.83 0
+              0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52
+              8.3-.81-4.06h8.23l-.78 4.06a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0
+               1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" />
+            </svg>
+          </button>
+          <!-- Чтобы увидеть разные всплывающие окна у корзины перейдите на 752 строку styles.css
+             и измените значения свойств display на противоположные -->
           <div class="basket-popup">
             <h3 class="basket-title">Корзина</h3>
             <ul class="basket-list">
@@ -97,7 +120,7 @@
                 <a class="basket-link" href="#">
                   <img class="basket-img" src="images/catalog-card-1.png" width="46" height="46"
                     alt="Шарик малинового мороженого.">
-                  <div class="basket-wrapper">
+                  <div class="basket-order-wrapper">
                     <p class="basket-description">Малинка</p>
                     <p class="basket-quantity">1 кг х 310 ₽</p>
                   </div>
@@ -110,7 +133,7 @@
                 <a class="basket-link" href="#">
                   <img class="basket-img" src="images/catalog-card-4.png" width="46" height="46"
                     alt="Шарик мороженого бабл-гам.">
-                  <div class="basket-wrapper">
+                  <div class="basket-order-wrapper">
                     <p class="basket-description">Бабл-гам</p>
                     <span class="basket-quantity">1,5 кг х 320 ₽</span>
                   </div>
@@ -146,17 +169,21 @@
         <h2 class="visually-hidden"> Список товаров с фильтрами</h2>
         <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
           <div class="filter-wrapper-one">
-            <h3 class="filter-title">Сортировка:</h3>
-            <select class="sorting-select">
-              <option value="popular">по популярности</option>
-              <option value="price">по цене</option>
-            </select>
+            <!-- Селект -->
+            <div class="select-wrapper">
+              <h3 class="filter-title">Сортировка:</h3>
+              <select class="sorting-select">
+                <option value="popular">по популярности</option>
+                <option value="cheap">сначала дешевые</option>
+                <option value="expensive">сначала дорогие</option>
+              </select>
+            </div>
             <!-- Фильтр по цене -->
             <fieldset class="filter">
               <h3 class="filter-title">Цена: 100 ₽ – 500 ₽</h3>
               <div class="range">
                 <div class="range-scale">
-                  <div class="range-bar" style="left:25px; width:100px"></div>
+                  <div class="range-bar" style="left:25px; width:86px"></div>
                   <button class="range-toggle toggle-min" type="button">
                     <span class="visually-hidden">Изменить минимальную цену.</span>
                   </button>
@@ -172,34 +199,31 @@
               <ul class="fat-content-list">
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="0%">
-                    <span class="fat-content-label">0%
-                      <span class="radio-mark"></span>
-                    </span>
+                    <input class="radio-input visually-hidden" type="radio" name="fat-content" value="0%">
+                    <span class="radio-mark"></span>
+                    <span class="fat-content-label">0%</span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="10%" checked>
-                    <span class="fat-content-label">10%
-                      <span class="radio-mark"></span>
-                    </span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="up to 10%"
+                      checked>
+                    <span class="radio-mark"></span>
+                    <span class="fat-content-label">до 10%</span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="30%">
-                    <span class="fat-content-label">30%
-                      <span class="radio-mark"></span>
-                    </span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="up to 30%">
+                    <span class="radio-mark"></span>
+                    <span class="fat-content-label">до 30%</span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value=">30%">
-                    <span class="fat-content-label">выше 30%
-                      <span class="radio-mark"></span>
-                    </span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="above 30%">
+                    <span class="radio-mark"></span>
+                    <span class="fat-content-label">выше 30% </span>
                   </label>
                 </li>
               </ul>
@@ -207,49 +231,44 @@
           </div>
           <div class="filter-wrapper-two">
             <!-- Фильтр по наполнителям -->
-            <fieldset class="filter">
+            <fieldset class="filter toppings-filter">
               <h3 class="filter-title">Наполнители:</h3>
               <ul class="toppings-list">
                 <li class="toppings-item">
-                  <label class="checkbox-label">
-                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping" value="chocolate"
-                      checked>
-                    <span class="toppings-label">
-                      <span class="checkbox-mark"></span>
-                      шоколадные</span>
+                  <label class="toppings-label">
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="chocolate"
+                      checked >
+                    <span class="control-mark"></span>
+                    <span class="checkbox-label">шоколадные</span>
                   </label>
                 </li>
                 <li class="toppings-item">
-                  <label class="checkbox-label">
-                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping"
-                      value="sugar sprinkles" checked>
-                    <span class="toppings-label">
-                      <span class="checkbox-mark"></span>
-                      сахарные посыпки</span>
+                  <label class="toppings-label">
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="sugar sprinkles"
+                      checked >
+                    <span class="control-mark"></span>
+                    <span class="checkbox-label">сахарные посыпки</span>
                   </label>
                 </li>
                 <li class="toppings-item">
-                  <label class="checkbox-label">
-                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping" value="fruit">
-                    <span class="toppings-label">
-                      <span class="checkbox-mark"></span>
-                      фрукты</span>
+                  <label class="toppings-label">
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="fruits" >
+                    <span class="control-mark"></span>
+                    <span class="checkbox-label">фрукты</span>
                   </label>
                 </li>
                 <li class="toppings-item">
-                  <label class="checkbox-label">
-                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping" value="syrups">
-                    <span class="toppings-label">
-                      <span class="checkbox-mark"></span>
-                      сиропы</span>
+                  <label class="toppings-label">
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="syrup" >
+                    <span class="control-mark"></span>
+                    <span class="checkbox-label">сиропы</span>
                   </label>
                 </li>
                 <li class="toppings-item">
-                  <label class="checkbox-label">
-                    <input class="checkbox-input visually-hidden" type="checkbox" name="topping" value="jams">
-                    <span class="toppings-label">
-                      <span class="checkbox-mark"></span>
-                      джемы</span>
+                  <label class="toppings-label">
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="jam" >
+                    <span class="control-mark"></span>
+                    <span class="checkbox-label">джемы</span>
                   </label>
                 </li>
               </ul>
@@ -325,7 +344,7 @@
               alt="Изображение черничного мороженого.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Черника</h3>
-              <p class="catalog-item-subtitle">Крем-брюле с черничным джемом</p>
+              <p class="catalog-item-subtitle">Крем-брюле<br> с черничным джемом</p>
               <div class="catalog-wrapper">
                 <span class="catalog-price">330 ₽/кг</span>
                 <button class="catalog-link " type="button">
@@ -354,7 +373,7 @@
               alt="Изображение мороженого бабл-гам.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Бабл-гам</h3>
-              <p class="catalog-item-subtitle">Ванильный пломбир со сладкой посыпкой</p>
+              <p class="catalog-item-subtitle">Ванильный пломбир<br>со сладкой посыпкой</p>
               <div class="catalog-wrapper">
                 <span class="catalog-price">320 ₽/кг</span>
                 <button class="catalog-link " type="button">
@@ -412,7 +431,7 @@
               alt="Изображение банового мороженого.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Банан</h3>
-              <p class="catalog-item-subtitle">Сливочный пломбир с банановым вкусом</p>
+              <p class="catalog-item-subtitle">Сливочный пломбир <br>с банановым вкусом</p>
               <div class="catalog-wrapper">
                 <span class="catalog-price">340 ₽/кг</span>
                 <button class="catalog-link " type="button">
@@ -470,7 +489,7 @@
               alt="Изображение клубничного мороженого.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Клубничка</h3>
-              <p class="catalog-item-subtitle">Сливочный пломбир с клубничным вкусом</p>
+              <p class="catalog-item-subtitle">Сливочный пломбир<br> с клубничным вкусом</p>
               <div class="catalog-wrapper">
                 <span class="catalog-price">300 ₽/кг</span>
                 <button class="catalog-link " type="button">
@@ -528,7 +547,7 @@
               alt="Изображение метолового мороженого.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Ментол</h3>
-              <p class="catalog-item-subtitle">Сливочный пломбир с ментоловым сиропом</p>
+              <p class="catalog-item-subtitle">Сливочный пломбир <br>с ментоловым сиропом</p>
               <div class="catalog-wrapper">
                 <span class="catalog-price">320 ₽/кг</span>
                 <button class="catalog-link " type="button">
@@ -586,7 +605,7 @@
               alt="Изображение мороженого  крем-брюле.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Крем-брюле</h3>
-              <p class="catalog-item-subtitle">Классическое крем-брюле </p>
+              <p class="catalog-item-subtitle">Классическое <br>крем-брюле </p>
               <div class="catalog-wrapper">
                 <span class="catalog-price">280 ₽/кг</span>
                 <button class="catalog-link " type="button">
@@ -623,8 +642,8 @@
               <li class="pagination-item">
                 <a class="pagination-link" href="#">2</a>
               </li>
-              <li class="pagination-item">
-                <span class="pagination-link pagination-link-divider">3</span>
+              <li class="pagination-item pagination-item-divider">
+                <span class="pagination-link ">3</span>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">4</a>
@@ -638,7 +657,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer catalog-footer">
       <!-- Cписок соцсетей -->
       <ul class=" footer-social-list">
         <li class="footer-social-item">
