--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="page-wrapper">
+    <!--Для отображения сосотояния загрузки кнопкам или ссылкам ввиде кнопок добавить класс loader -->
     <header class="page-header">
       <!-- Логотип -->
       <a class="header-logo" href="index.html">
@@ -55,6 +56,7 @@
         <!-- Поиск по сайту -->
         <div class="search-wrapper">
           <button class=" header-button search-button" type="button">
+            <span class="visually-hidden">Поиск по сайту.</span>
             <svg width="14" height="14" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M1.66 6.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" />
@@ -112,7 +114,7 @@
             </svg>
           </button>
           <!-- Чтобы увидеть разные всплывающие окна у корзины перейдите на 752 строку styles.css
-             и измените значения свойств display на противоположные -->
+             и измените значения свойств display -->
           <div class="basket-popup">
             <h3 class="basket-title">Корзина</h3>
             <ul class="basket-list">
@@ -166,7 +168,7 @@
       <h2 class="catalog-title">Сливочное мороженое</h2>
       <!-- Фильтры -->
       <section class="filters">
-        <h2 class="visually-hidden"> Список товаров с фильтрами</h2>
+        <h2 class="visually-hidden"> Список товаров с фильтрами.</h2>
         <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
           <div class="filter-wrapper-one">
             <!-- Селект -->
@@ -206,7 +208,7 @@
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="up to 10%"
+                    <input class="radio-input visually-hidden" type="radio" name="fat-content" value="up to 10%"
                       checked>
                     <span class="radio-mark"></span>
                     <span class="fat-content-label">до 10%</span>
@@ -214,14 +216,14 @@
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="up to 30%">
+                    <input class="radio-input visually-hidden" type="radio" name="fat-content" value="up to 30%">
                     <span class="radio-mark"></span>
                     <span class="fat-content-label">до 30%</span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="above 30%">
+                    <input class="radio-input visually-hidden" type="radio" name="fat-content" value="above 30%">
                     <span class="radio-mark"></span>
                     <span class="fat-content-label">выше 30% </span>
                   </label>
@@ -237,7 +239,7 @@
                 <li class="toppings-item">
                   <label class="toppings-label">
                     <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="chocolate"
-                      checked >
+                      checked>
                     <span class="control-mark"></span>
                     <span class="checkbox-label">шоколадные</span>
                   </label>
@@ -245,28 +247,28 @@
                 <li class="toppings-item">
                   <label class="toppings-label">
                     <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="sugar sprinkles"
-                      checked >
+                      checked>
                     <span class="control-mark"></span>
                     <span class="checkbox-label">сахарные посыпки</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="toppings-label">
-                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="fruits" >
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="fruits">
                     <span class="control-mark"></span>
                     <span class="checkbox-label">фрукты</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="toppings-label">
-                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="syrup" >
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="syrup">
                     <span class="control-mark"></span>
                     <span class="checkbox-label">сиропы</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="toppings-label">
-                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="jam" >
+                    <input class="visually-hidden checkbox-input" type="checkbox" name="color" value="jam">
                     <span class="control-mark"></span>
                     <span class="checkbox-label">джемы</span>
                   </label>
@@ -602,7 +604,7 @@
           </li>
           <li class="catalog-item">
             <img class="catalog-img" src="images/catalog-card-12.png" width="168" height="168"
-              alt="Изображение мороженого  крем-брюле.">
+              alt="Изображение мороженого крем-брюле.">
             <div class="catalog-item-content">
               <h3 class="catalog-item-title">Крем-брюле</h3>
               <p class="catalog-item-subtitle">Классическое <br>крем-брюле </p>
